@@ -100,8 +100,8 @@ class Document extends Error {
 	/**
 	 *	create - use this function to create a new entry in the database.
 	 *
-	 *	@param	string	The filename of this document.
-	 *	@param	string	The filetype of this document.
+	 *	@param	string	The filename of this document. Can be a URL.
+	 *	@param	string	The filetype of this document. If filename is URL, this should be 'URL';
 	 *	@param	string	The contents of this document (should be addslashes()'d before entry).
 	 *	@param	int	The doc_group id of the doc_groups table.
 	 *	@param	string	The title of this document.
@@ -223,6 +223,15 @@ class Document extends Error {
 	 */
 	function getDescription() {
 		return $this->data_array['description'];
+	}
+
+	/**
+	 *	isURL - whether this document is a URL and not a local file.
+	 *
+	 *	@return	boolean	is_url.
+	 */
+	function isURL() {
+		return ($this->data_array['filetype'] == 'URL');
 	}
 
 	/**
@@ -358,8 +367,8 @@ class Document extends Error {
 	/**
 	 *	update - use this function to update an existing entry in the database.
 	 *
-	 *	@param	string	The filename of this document.
-	 *	@param	string	The filetype of this document.
+	 *	@param	string	The filename of this document. Can be a URL.
+	 *	@param	string	The filetype of this document. If filename is URL, this should be 'URL';
 	 *	@param	string	The contents of this document (should be addslashes()'d before entry).
 	 *	@param	int	The doc_group id of the doc_groups table.
 	 *	@param	string	The title of this document.
